components dinamycs propertys

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,7 +3,7 @@
     <div class="container_small-card-content">
         <div class="small-card_photo"
         >
-           <img src="https://img.olhardigital.com.br/wp-content/uploads/2022/12/god-of-war-2.jpg" 
+           <img src="{{ photoCover }}" 
            alt=""
            
            srcset=""
@@ -11,7 +11,7 @@
         </div>
      
         <div class="small-card_title">
-         <h1><a href="#">Saiu a nova versão do angular</a></h1>
+         <h1><a href="#">{{ cardTitle }}</a></h1>
         </div>
     </div>
     
