--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,7 +2,7 @@
 
    <div class="big-card_photo"
    >
-      <img src="https://assets.turbologo.com/blog/pt/2021/07/15084845/35cd555af4ebd39da4fb51db778b3a30-958x575-1.jpg" 
+      <img src="{{photoCover}}"
       alt=""
       height="240px"
       
@@ -11,13 +11,13 @@
    </div>
 
    <div class="big-card_title">
-    <h1><a href="#">Saiu versão nova do angular</a></h1>
+    <h1><a href="#" >{{cardTitle}}</a></h1>
    </div>
 
    <div class="big-card_description">
     <p>
       <a href="#">
-        Tratava-se de um Titanus giganteus, o maior besouro do mundo. O exemplar que chegou à Suíça mede 14,5 cm de comprimento e pesa 25 gramas, mas besouros dessa espécie podem atingir até 22 cm de comprimento e pesar 70 gramas, sendo considerados os maiores insetos do planeta em volume.
+        {{cardDescription}}
       </a>
    </p>
    </div>
