--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,11 +1,16 @@
 
+
 <div class="container_menu-bar">
+    
     <ul>
+        <li><img src="https://logodownload.org/wp-content/uploads/2017/05/playstation-4-logo-ps4-6.png" alt=""></li>
+        <li><span>•</span></li>
         <li><a href="">Linkedin</a></li>
         <li><span>•</span></li>
-        <li><a href="">Github</a></li>
+        <li><a href="https://github.com/lups-717/angular-blog" target="_blank">Github</a></li>
         <li><span>•</span></li>
-        <li><a href="">Youtube</a></li>
+        <li><a href="https://www.youtube.com/@PlayStation" target="_blank">Youtube</a></li>
         <li><span>•</span></li>
+        <li><img src="https://logodownload.org/wp-content/uploads/2017/05/playstation-4-logo-ps4-6.png" alt=""></li>
     </ul>
 </div>
