--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
     id="1"
     photoCover="https://cdn.ome.lt/jizBaf2WckH4KkdPQ7tR6ZZ-P2k=/1200x630/smart/extras/conteudos/God_of_War_kratos_x_freya_fNFsSps.jpg"
     cardTitle="God Of War Ragnarock é um sucesso"
-    cardDescription="Depois de seu lançamento God Of War Ragnarok conquitou seu lugar como um dos melhores jogos do ano"
+    cardDescription="Depois de seu lançamento God Of War Ragnarok conquistou seu lugar como um dos melhores jogos do ano"
     >
      </app-big-card>
 
@@ -24,14 +24,14 @@
     <app-small-card
       id="3"
       photoCover="https://cdn.marvel.com/content/1x/marvels-spider-man-2-everything-you-need-to-know-article-card.jpg"
-      cardTitle="Marvel's Spiderman 2 etá trazendo novidades interessantes"
+      cardTitle="Marvel's Spiderman 2 está trazendo novidades interessantes"
     >
      </app-small-card>
 
     <app-small-card
       id="4"
       photoCover="https://i.ytimg.com/vi/-32-6FqGW2E/maxresdefault.jpg"
-      cardTitle="God Of War Ragnarok ganha como melor trilha sonora" 
+      cardTitle="God Of War Ragnarok ganha como melhor trilha sonora" 
     >
      </app-small-card>
    </div>
