--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -8,5 +8,11 @@
 .container_menu-bar > ul > li{
     margin-right: 20px;
     list-style: none;
+    justify-content: center;
+}
+
+.container_menu-bar > ul > li >img{
+    width: 25px;
+    height: 20px;
 }
     
